--- a/vue/package.json
+++ b/vue/package.json
@@ -15,6 +15,7 @@
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.3.4",
     "vue": "^3.2.47",
+    "vue-debounce": "^4.0.0",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
