--- a/frontt/package.json
+++ b/frontt/package.json
@@ -8,13 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "swiper": "^9.2.0",
+    "vee-validate": "^4.8.4",
     "vue": "^3.2.47",
+    "vue-carousel": "^0.18.0",
+    "vue-debounce": "^4.0.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "webpack": "^5.77.0"
   }
 }
