--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vuelidate/core": "^2.0.2",
+        "@vuelidate/validators": "^2.0.2"
     }
 }
