--- a/frontt/package.json
+++ b/frontt/package.json
@@ -20,6 +20,7 @@
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-slick-carousel": "^1.0.6",
+    "vue3-json-editor": "^1.1.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
