--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.3.4",
+    "swiper": "^9.2.4",
     "vue": "^3.2.47",
     "vue-debounce": "^4.0.0",
     "vue-router": "^4.1.6",
